test/functions/deitz/test_write_type_error.good
test_write_type_error.chpl:2: error: unresolved call 'writeln(int)'
$CHPL_HOME/modules/standard/ChapelIO.chpl:298: note: candidates are: :Writer.writeln(args ...)
$CHPL_HOME/modules/standard/ChapelIO.chpl:301: note:                 :Writer.writeln()
$CHPL_HOME/modules/standard/ChapelIO.chpl:310: note:                 writeln(args ...)
$CHPL_HOME/modules/standard/ChapelIO.chpl:314: note:                 writeln()
